# biz/router/user/user.go
@@ -27,6 +27,9 @@ func Register(r *server.Hertz) {
 				_user := _jobor.Group("/user", _userMw()...)
 				_user.PUT("/:id", append(_putuserMw(), user.PutUser)...)
 				_user.DELETE("/:id", append(_deleteuserMw(), user.DeleteUser)...)
+				_user.PUT("/pass-reset", append(_putuserpassrestMw(), user.PutUserPassRest)...)
+				_user.PUT("/password", append(_putuserpasswordMw(), user.PutUserPassword)...)
+				_user.PUT("/profile", append(_putuserprofileMw(), user.PutUserProfile)...)
 				_jobor.GET("/user-self", append(_getuserselfMw(), user.GetUserSelf)...)
 				_jobor.GET("/user-sync", append(_syncuserMw(), user.SyncUser)...)
 				_jobor.GET("/users", append(_getuserallMw(), user.GetUserAll)...)
